--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Calculator!</h1>
     <main>
       <div class="container">
         <div class="display"></div>
@@ -30,6 +31,11 @@
           <button class="debug">Debug</button>
         </div>
       </div>
+      <!-- <div id="debug">
+        <p id="num1">Num1:</p>
+        <p id="operator">Operator</p>
+        <p id="num2">Num2:</p>
+      </div> -->
     </main>
 
     <script src="script.js"></script>
