--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Calculator!</h1>
+    <h1>Calculator</h1>
     <main>
       <div class="container">
         <div class="display"></div>
@@ -28,14 +28,17 @@
           <button class="operator">/</button>
           <button id="clear">CE</button>
           <button class="equal">=</button>
-          <button class="debug">Debug</button>
+          <!-- <button class="debug">Debug</button> -->
         </div>
       </div>
-      <!-- <div id="debug">
+      <div id="debug">
         <p id="num1">Num1:</p>
         <p id="operator">Operator</p>
         <p id="num2">Num2:</p>
-      </div> -->
+        <p>=</p>
+        <p id="res">Res</p>
+      </div>
+
     </main>
 
     <script src="script.js"></script>
