Add calculation log and and responsiveness
Added function for logging the calculations made and add responsiveness

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Yuji+Boku&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Calculator</h1>
     <main>
+      <h1>Calculator</h1>
+      <div class="main-container">
       <div class="container">
         <div class="display"></div>
         <div class="button-container">
@@ -32,12 +36,19 @@
         </div>
       </div>
       <div id="debug">
-        <p id="num1">Num1:</p>
+        <!-- <p id="num1">Num1:</p>
         <p id="operator">Operator</p>
         <p id="num2">Num2:</p>
         <p>=</p>
-        <p id="res">Res</p>
+        <p id="res">Res</p> -->
+        <div>
+        <h3>Calculations Log</h3>
+        <ul>
+
+        </ul>
       </div>
+    </div>
+    </div>
 
     </main>
 
